--- a/App/Views/LoginPage/login.html
+++ b/App/Views/LoginPage/login.html
@@ -17,8 +17,11 @@
                         <input id="inp-senha" type="password" name="senha" required/>
                         <label for="inp-senha">Senha</label>
                     </div>
-                    <input id="conectado" type="checkbox">
-                    <label id="label-conectado" for="conectado">Manter conectado</label>
+                    <div class="conectado">
+                        <input id="conectado" type="checkbox">
+                        <label id="label-conectado" for="conectado">Manter conectado</label>
+                    </div>
+                    
                     <div class="container-btn-entrar">
                         <button id="btn-entrar">Entrar</button>
                     </div>
