--- a/App/Views/StructurePages/structurePages.html
+++ b/App/Views/StructurePages/structurePages.html
@@ -10,6 +10,7 @@
             <link rel="stylesheet" href="public/css/CortesPageStyle/cortes.css">
             <link rel="stylesheet" href="public/css/LoginPageStyle/login.css">
             <link rel="stylesheet" href="public/css/RegisterPageStyle/register.css">
+            <link rel="stylesheet" href="public/css/ProfilePageStyle/profile.css">
             <link rel="stylesheet" href="public/css/StructurePagesStyle/structure.css">
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,8 +30,9 @@
                         </div>
                         <div id="buttons-top">
                             <div class="navigation">
-                                <a href="http://localhost/Barbearia-Noblesse/?page=sobre">Sobre</a>
+                                <a href="http://localhost/Barbearia-Noblesse/">Home</a>
                                 <a href="http://localhost/Barbearia-Noblesse/?page=cortes">Cortes</a>
+                                <a href="http://localhost/Barbearia-Noblesse/?page=sobre">Sobre</a>
                                 <a href="http://localhost/Barbearia-Noblesse/?page=contato">Contato</a>
                             </div>
                             <button id="light-dark-theme"
