initial mediaquerys layout

--- a/App/Views/StructurePages/structurePages.html
+++ b/App/Views/StructurePages/structurePages.html
@@ -47,6 +47,30 @@
                                         alt="Área do Usuário">
                                 </a>                           
                             </button>
+                            <button id="btn-open-menu" class="open-menu">
+                                <img src="public/img/menu-black.png" alt="Menu">
+                            </button>
+                            <div class="sandwich">
+                                <div id="menu-structure" 
+                                     class="menu-structure">
+                                    <button id="light-dark-theme2"
+                                            onclick="themeColorHome()">                               
+                                        <img id="icon-theme" 
+                                            src="public/img/lua.png" 
+                                            alt="Mudar Tema"
+                                        /> 
+                                    <label for="light-dark-theme" class="p-tema">Tema</label>                            
+                                    </button>
+                                    <button id="user-profile2">
+                                        <a id="link-user" href="http://localhost/Barbearia-Noblesse/?page=login">
+                                            <img id="img-user-profile" 
+                                                 src="public/img/user-black.png" 
+                                                 alt="Área do Usuário">
+                                        </a>  
+                                        <label for="link-user" class="p-perfil">Perfil</label>                         
+                                    </button>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </nav>
