--- a/public/css/StructurePagesStyle/structure.css
+++ b/public/css/StructurePagesStyle/structure.css
@@ -1,150 +1,619 @@
-/*Estilo Light*/
-& .links_light {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 0 40px;
-    width: calc(100% - 80px);
-    height: 70px;
-    background-color: #dff2f7;
-    border-bottom: 3px solid rgb(43, 90, 117);
-
-    & #logo{
-        width: 50%;
-
-        img {
-            width: 130px;  
-            -webkit-filter: drop-shadow(2px 2px 10px #fff);
-            filter: drop-shadow(4px 4px 10px #fff);               
-        }
-    }
-
-    & #buttons-top {
+@media screen and (min-width: 1025px) {
+    /*Estilo Light*/
+    .links_light {
         display: flex;
         flex-direction: row;
         align-items: center;
-        justify-content: flex-end;
-        width: 50%;
+        padding: 0 40px;
+        width: calc(100% - 80px);
+        height: 70px;
+        background-color: #dff2f7;
+        border-bottom: 3px solid rgb(43, 90, 117);
 
-        & .navigation {
+        & #logo{
+            width: 50%;
+
+            img {
+                width: 130px;  
+                -webkit-filter: drop-shadow(2px 2px 10px #fff);
+                filter: drop-shadow(4px 4px 10px #fff);               
+            }
+        }
+
+        & #buttons-top {
             display: flex;
             flex-direction: row;
+            align-items: center;
+            justify-content: flex-end;
+            width: 50%;
+            position: relative;
 
-            & a {
-                margin-right: 20px;
-                border-bottom: 2px solid rgb(85, 85, 85);
-                border-radius: 0 0 5px 5px;
-                width: 100px;
-                height: 50px;
-                text-align: center;
-                line-height: 3.5;
-                text-decoration: none;
-                color: rgb(48, 48, 48);
-                font-family: Arial, Helvetica, sans-serif;
-                font-size: 14px;
+            & .navigation {
+                display: flex;
+                flex-direction: row;
+
+                & a {
+                    margin-right: 20px;
+                    border-bottom: 2px solid rgb(85, 85, 85);
+                    border-radius: 0 0 5px 5px;
+                    width: 100px;
+                    height: 50px;
+                    text-align: center;
+                    line-height: 3.5;
+                    text-decoration: none;
+                    color: rgb(48, 48, 48);
+                    font-family: Arial, Helvetica, sans-serif;
+                    font-size: 14px;
+                }
+                & a:hover {
+                    background-position: bottom;
+                    border-radius: 5px 5px 0 0;
+                    transition: 0.1s;
+                    font-size: 15px;
+                }
             }
-            & a:hover {
-                background-position: bottom;
-                border-radius: 5px 5px 0 0;
-                transition: 0.1s;
-                font-size: 15px;
+
+            & #light-dark-theme, #user-profile {
+                background: transparent;
+                border: none;
+                margin-left: 20px;
+
+                img {
+                    width: 30px;
+                }
             }
-        }
-
-        & #light-dark-theme, #user-profile {
-            background: transparent;
-            border: none;
-            margin-left: 20px;
-
-            img {
-                width: 30px;
+            & #light-dark-theme:hover {
+                cursor: pointer;
             }
-        }
 
-        #user-profile {
-            img {
-                height: 35px;
-                width: 35px;
+            #user-profile {
+                img {
+                    height: 35px;
+                    width: 35px;
+                }
             }
         }
     }
+
+    /*Estilo Dark*/
+    .links_dark{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        padding: 0 40px;
+        width: calc(100% - 80px);
+        height: 70px;
+        background-color: #022F40;
+        border-bottom: 3px solid rgb(124, 193, 233);
+
+        & #logo{
+            width: 50%;
+            position: relative;
+
+            & #led-light{
+                position: absolute;
+                left: 0;
+                bottom: -18px;
+                background-image: linear-gradient(360deg, rgb(255, 255, 255), transparent, transparent, transparent);
+                width: 130px;
+                height: 100%;
+                transform: perspective(200px) rotateX(60deg);
+            
+            }
+
+            img {
+                width: 130px;
+            }
+        }
+
+        & #buttons-top {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: flex-end;
+            width: 50%;
+            position: relative;
+
+            & .navigation {
+                display: flex;
+                flex-direction: row;
+
+                & a {
+                    margin-right: 20px;
+                    border-bottom: 2px solid rgb(255, 255, 255);
+                    border-radius: 0 0 5px 5px;
+                    width: 100px;
+                    height: 50px;
+                    text-align: center;
+                    line-height: 3.5;
+                    text-decoration: none;
+                    color: rgb(216, 216, 216);
+                    font-family: Arial, Helvetica, sans-serif;
+                    font-size: 14px;
+                }
+            }
+
+            & #light-dark-theme, #user-profile {
+                background: transparent;
+                border: none;
+                margin-left: 20px;
+
+                img {
+                    width: 30px;
+                }
+            }
+
+            & #user-profile {
+                img {
+                    height: 35px;
+                    width: 35px;
+                }
+            }
+        } 
+    }
+
+    .open-menu {
+        display: none;
+    }
+    .sandwich {
+        display: none;
+    }
 }
 
-/*Estilo Dark*/
-& .links_dark{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 0 40px;
-    width: calc(100% - 80px);
-    height: 70px;
-    background-color: #022F40;
-    border-bottom: 3px solid rgb(124, 193, 233);
 
-    & #logo{
-        width: 50%;
-        position: relative;
 
-        & #led-light{
+
+@media screen and (min-width: 551px) and (max-width: 1024px) {
+    /*Estilo Light*/
+    .links_light {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 0 40px;
+        width: calc(100% - 80px);
+        height: 140px;
+        background-color: #dff2f7;
+        border-bottom: 3px solid rgb(43, 90, 117);
+
+        & #logo{
+            width: 100%;
+            text-align: center;
+            padding-top: 20px;
+
+            img {
+                width: 130px;  
+                -webkit-filter: drop-shadow(2px 2px 10px #fff);
+                filter: drop-shadow(4px 4px 10px #fff);               
+            }
+        }
+
+        & #buttons-top {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+            position: relative;
+
+            & .navigation {
+                display: flex;
+                flex-direction: row;
+
+                & a {
+                    margin-right: 20px;
+                    border-bottom: 2px solid rgb(85, 85, 85);
+                    border-radius: 0 0 5px 5px;
+                    width: 100px;
+                    height: 50px;
+                    text-align: center;
+                    line-height: 3.5;
+                    text-decoration: none;
+                    color: rgb(48, 48, 48);
+                    font-family: Arial, Helvetica, sans-serif;
+                    font-size: 14px;
+                }
+                & a:hover {
+                    background-position: bottom;
+                    border-radius: 5px 5px 0 0;
+                    transition: 0.1s;
+                    font-size: 15px;
+                }
+            }
+
+            & #light-dark-theme, #user-profile {
+                display: none;              
+            }
+        }
+    }
+
+    /*Estilo Dark*/
+    .links_dark{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        padding: 0 40px;
+        width: calc(100% - 80px);
+        height: 70px;
+        background-color: #022F40;
+        border-bottom: 3px solid rgb(124, 193, 233);
+
+        & #logo{
+            width: 50%;
+            position: relative;
+
+            & #led-light{
+                position: absolute;
+                left: 0;
+                bottom: -18px;
+                background-image: linear-gradient(360deg, rgb(255, 255, 255), transparent, transparent, transparent);
+                width: 130px;
+                height: 100%;
+                transform: perspective(200px) rotateX(60deg);
+            
+            }
+
+            img {
+                width: 130px;
+            }
+        }
+
+        & #buttons-top {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: flex-end;
+            width: 50%;
+            position: relative;
+
+            & .navigation {
+                display: flex;
+                flex-direction: row;
+
+                & a {
+                    margin-right: 20px;
+                    border-bottom: 2px solid rgb(255, 255, 255);
+                    border-radius: 0 0 5px 5px;
+                    width: 100px;
+                    height: 50px;
+                    text-align: center;
+                    line-height: 3.5;
+                    /*text-decoration: none;*/
+                    color: rgb(216, 216, 216);
+                    font-family: Arial, Helvetica, sans-serif;
+                    font-size: 14px;
+                }
+            }
+
+            & #light-dark-theme, #user-profile {
+                background: transparent;
+                border: none;
+                margin-left: 20px;
+
+                img {
+                    width: 30px;
+                }
+            }
+
+            & #user-profile {
+                img {
+                    height: 35px;
+                    width: 35px;
+                }
+            }
+        } 
+    }
+
+    .open-menu {
+        display: flex;
+        background-color: transparent;
+        border: none;
+        position: absolute;
+        right: 0px;
+        bottom: 0;
+    
+        & img {
+            width: 30px;
+        }
+    }
+    
+    .sandwich {
+        background-color: rgb(7, 23, 77);
+        position: absolute;
+        display: flex;
+        flex-direction: column;
+        height: 100px;
+        width: 200px;
+        padding-top: 20px;
+        top: 70px;
+        border-radius: 10px 0 0 10px;
+        z-index: 1;
+        right: -40px;
+    
+        & #light-dark-theme2 {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
             position: absolute;
             left: 0;
-            bottom: -18px;
-            background-image: linear-gradient(360deg, rgb(255, 255, 255), transparent, transparent, transparent);
-            width: 130px;
-            height: 100%;
-            transform: perspective(200px) rotateX(60deg);
-           
-        }
-
-        img {
-            width: 130px;
-        }
-    }
-
-    & #buttons-top {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: flex-end;
-        width: 50%;
-
-        & .navigation {
-            display: flex;
-            flex-direction: row;
-
-            & a {
-                margin-right: 20px;
-                border-bottom: 2px solid rgb(255, 255, 255);
-                border-radius: 0 0 5px 5px;
-                width: 100px;
-                height: 50px;
-                text-align: center;
-                line-height: 3.5;
-                text-decoration: none;
-                color: rgb(216, 216, 216);
-                font-family: Arial, Helvetica, sans-serif;
-                font-size: 14px;
-            }
-        }
-
-        & #light-dark-theme, #user-profile {
-            background: transparent;
+            width: 30px;
+            height: 30px;
+            background-color: transparent;
             border: none;
             margin-left: 20px;
 
-            img {
+            & img {
+                width: 30px
+            }
+    
+            & .p-tema {
+                margin-left: 10px;
+                color: #fff;
+                font-size: 16px;
+            }
+        }
+    
+        & #user-profile2 {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            position: absolute;
+            left: 0;
+            top: 70px;
+            width: 30px;
+            height: 30px;
+            background-color: transparent;
+            border: none;
+            margin-left: 20px;
+
+            & img {
                 width: 30px;
+            }
+    
+            & .p-perfil {
+                margin-left: 10px;
+                color: #fff;
+                font-size: 16px;
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 550px){
+    /*Estilo Light*/
+    .links_light {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 0 20px;
+        width: calc(100% - 40px);
+        height: 140px;
+        background-color: #dff2f7;
+        border-bottom: 3px solid rgb(43, 90, 117);
+
+        & #logo{
+            width: 100%;
+            text-align: center;
+            padding-top: 20px;
+
+            img {
+                width: 130px;  
+                -webkit-filter: drop-shadow(2px 2px 10px #fff);
+                filter: drop-shadow(4px 4px 10px #fff);               
             }
         }
 
-        #user-profile {
-            img {
-                height: 35px;
-                width: 35px;
+        & #buttons-top {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+            position: relative;
+
+            & .navigation {
+                display: flex;
+                flex-direction: row;
+
+                & a {
+                    border-bottom: 2px solid rgb(85, 85, 85);
+                    border-radius: 0 0 5px 5px;
+                    width: 80px;
+                    height: 50px;
+                    text-align: center;
+                    line-height: 3.5;
+                    text-decoration: none;
+                    color: rgb(48, 48, 48);
+                    font-family: Arial, Helvetica, sans-serif;
+                    font-size: 14px;
+                }
+                & a:not(:last-child) {
+                    margin-right: 20px;
+                }
+                & a:hover {
+                    background-position: bottom;
+                    border-radius: 5px 5px 0 0;
+                    transition: 0.1s;
+                    font-size: 15px;
+                }
+            }
+
+            & #light-dark-theme, #user-profile {
+                display: none;              
             }
         }
-    }  
+    }
+
+    /*Estilo Dark*/
+    .links_dark{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        padding: 0 40px;
+        width: calc(100% - 80px);
+        height: 70px;
+        background-color: #022F40;
+        border-bottom: 3px solid rgb(124, 193, 233);
+
+        & #logo{
+            width: 50%;
+            position: relative;
+
+            & #led-light{
+                position: absolute;
+                left: 0;
+                bottom: -18px;
+                background-image: linear-gradient(360deg, rgb(255, 255, 255), transparent, transparent, transparent);
+                width: 130px;
+                height: 100%;
+                transform: perspective(200px) rotateX(60deg);
+            
+            }
+
+            img {
+                width: 130px;
+            }
+        }
+
+        & #buttons-top {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: flex-end;
+            width: 50%;
+            position: relative;
+
+            & .navigation {
+                display: flex;
+                flex-direction: row;
+
+                & a {
+                    margin-right: 20px;
+                    border-bottom: 2px solid rgb(255, 255, 255);
+                    border-radius: 0 0 5px 5px;
+                    width: 50px;
+                    height: 50px;
+                    text-align: center;
+                    line-height: 3.5;
+                    /*text-decoration: none;*/
+                    color: rgb(216, 216, 216);
+                    font-family: Arial, Helvetica, sans-serif;
+                    font-size: 14px;
+                }
+            }
+
+            & #light-dark-theme, #user-profile {
+                background: transparent;
+                border: none;
+                margin-left: 20px;
+
+                img {
+                    width: 30px;
+                }
+            }
+
+            & #user-profile {
+                img {
+                    height: 35px;
+                    width: 35px;
+                }
+            }
+        } 
+    }
+
+    .open-menu {
+        display: flex;
+        background-color: transparent;
+        border: none;
+        position: absolute;
+        right: 0px;
+        bottom: 0;
+    
+        & img {
+            width: 30px;
+        }
+    }
+    
+    .sandwich {
+        background-color: rgb(7, 23, 77);
+        position: absolute;
+        display: flex;
+        flex-direction: column;
+        height: 100px;
+        width: 200px;
+        padding-top: 20px;
+        top: 70px;
+        border-radius: 10px 0 0 10px;
+        z-index: 1;
+        right: -40px;
+    
+        & #light-dark-theme2 {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            position: absolute;
+            left: 0;
+            width: 30px;
+            height: 30px;
+            background-color: transparent;
+            border: none;
+            margin-left: 20px;
+
+            & img {
+                width: 30px
+            }
+    
+            & .p-tema {
+                margin-left: 10px;
+                color: #fff;
+                font-size: 16px;
+            }
+        }
+    
+        & #user-profile2 {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            position: absolute;
+            left: 0;
+            top: 70px;
+            width: 30px;
+            height: 30px;
+            background-color: transparent;
+            border: none;
+            margin-left: 20px;
+
+            & img {
+                width: 30px;
+            }
+    
+            & .p-perfil {
+                margin-left: 10px;
+                color: #fff;
+                font-size: 16px;
+            }
+        }
+    }
+    
+
+    .open-menu {
+        display: flex;
+        background-color: transparent;
+        border: none;
+        position: absolute;
+        right: -5px;
+        margin-bottom: 65px;
+    
+        & img {
+            width: 30px;
+        }
+    }
 }
+
+
+
+
+
+
 
 /*Footer*/
 & .logo-barbearia {
@@ -177,6 +646,8 @@
     }
 }
 
+
+
 /*Estilo footer Light*/
 & .footer-light {
     text-align: center;
@@ -186,6 +657,8 @@
     text-align: center;
     color: white;
 }
+
+
 
 
 
